Fix mojom typemap dependencies

public_headers and traits_headers entries were incorrectly being slurped
into generated C++ bindings targets' |sources| lists. This is not correct
and caused GN to miss a whole bunch of legitimately missing dependencies.

Fixes the mojom GN rule behavior and updates affected targets.

This change also for some reason (I'm assuming breakage of obscure
transitive dependencies) started triggering a few other non-mojom
targets to fail gn check for legitimate reasons, so those issues have
been corrected as well.

Bug: 801308
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Ia6e70f9b7c9bf969ef05054d32928d44d6171971

TBR=danakj@chromium.org,sky@chromium.org,mfoltz@chromium.org,bradnelson@chromium.org,nparker@chromium.org,miu@chromium.org

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ia6e70f9b7c9bf969ef05054d32928d44d6171971
Reviewed-on: https://chromium-review.googlesource.com/862702
Commit-Queue: Ken Rockot <rockot@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Varun Khaneja <vakh@chromium.org>
Reviewed-by: Yuzhu Shen <yzshen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529864}
Former-commit-id: db79117e3ef1721a55fec4d2a60c30054b8f5bce