chrome/browser/vr/ui_scene_constants.h
@@ -10,7 +10,7 @@
 namespace vr {
 
 static constexpr int kWarningTimeoutSeconds = 30;
-static constexpr float kWarningDistance = 1.0;
+static constexpr float kWarningDistance = 1.0f;
 static constexpr float kWarningAngleRadians = gfx::DegToRad(16.3f);
 static constexpr float kPermanentWarningHeightDMM = 0.049f;
 static constexpr float kPermanentWarningWidthDMM = 0.1568f;
@@ -24,7 +24,7 @@ static constexpr float kExitWarningXPaddingDMM = 0.033f;
 static constexpr float kExitWarningYPaddingDMM = 0.023f;
 static constexpr float kExitWarningCornerRadiusDMM = 0.008f;
 
-static constexpr float kContentDistance = 2.5;
+static constexpr float kContentDistance = 2.5f;
 static constexpr float kContentWidthDMM = 0.96f;
 static constexpr float kContentHeightDMM = 0.64f;
 static constexpr float kContentWidth = kContentWidthDMM * kContentDistance;
@@ -35,10 +35,10 @@ static constexpr float kContentVerticalOffset =
 static constexpr float kContentCornerRadius = 0.005f * kContentWidth;
 static constexpr float kContentShadowOffset = 0.09f;
 static constexpr float kContentShadowIntesity = 0.3f;
-static constexpr float kBackplaneSize = 1000.0;
+static constexpr float kBackplaneSize = 1000.0f;
 static constexpr float kBackgroundDistanceMultiplier = 1.414f;
 
-static constexpr float kFullscreenDistance = 3;
+static constexpr float kFullscreenDistance = 3.0f;
 // Make sure that the aspect ratio for fullscreen is 16:9. Otherwise, we may
 // experience visual artefacts for fullscreened videos.
 static constexpr float kFullscreenHeightDMM = 0.64f;
@@ -53,7 +53,7 @@ static constexpr float kExitPromptWidth = 0.672f * kContentDistance;
 static constexpr float kExitPromptHeight = 0.2f * kContentDistance;
 
 static constexpr float kExitPromptVerticalOffset = -0.09f * kContentDistance;
-static constexpr float kPromptBackplaneSize = 1000.0;
+static constexpr float kPromptBackplaneSize = 1000.0f;
 
 static constexpr float kUrlBarDistance = 2.4f;
 static constexpr float kUrlBarWidthDMM = 0.672f;
@@ -87,7 +87,7 @@ static constexpr float kIndicatorDistanceOffset = 0.1f;
 
 static constexpr float kWebVrUrlToastWidthDMM = 0.472f;
 static constexpr float kWebVrUrlToastHeightDMM = 0.064f;
-static constexpr float kWebVrUrlToastDistance = 1.0;
+static constexpr float kWebVrUrlToastDistance = 1.0f;
 static constexpr float kWebVrUrlToastWidth =
     kWebVrUrlToastWidthDMM * kWebVrUrlToastDistance;
 static constexpr float kWebVrUrlToastHeight =
@@ -96,7 +96,7 @@ static constexpr int kWebVrUrlToastTimeoutSeconds = 6;
 static constexpr float kWebVrUrlToastOpacity = 0.8f;
 static constexpr float kWebVrUrlToastRotationRad = gfx::DegToRad(14.0f);
 
-static constexpr float kWebVrToastDistance = 1.0;
+static constexpr float kWebVrToastDistance = 1.0f;
 static constexpr float kToastWidthDMM = 0.512f;
 static constexpr float kToastHeightDMM = 0.064f;
 static constexpr float kToastOffsetDMM = 0.004f;
@@ -116,10 +116,10 @@ static constexpr float kSplashScreenTextDistance = 2.5f;
 static constexpr float kSplashScreenTextFontHeightDMM = 0.05f;
 static constexpr float kSplashScreenTextWidthDMM = 0.9f;
 static constexpr float kSplashScreenTextVerticalOffsetDMM = -0.072f;
-static constexpr float kSplashScreenMinDurationSeconds = 2;
+static constexpr float kSplashScreenMinDurationSeconds = 2.0f;
 
 static constexpr float kButtonDiameterDMM = 0.088f;
-static constexpr float kButtonZOffsetHoverDMM = 0.048;
+static constexpr float kButtonZOffsetHoverDMM = 0.048f;
 
 static constexpr float kCloseButtonDistance = 2.4f;
 static constexpr float kCloseButtonVerticalOffset =
@@ -141,8 +141,8 @@ static constexpr float kLoadingIndicatorVerticalOffsetDMM =
 static constexpr float kLoadingIndicatorDepthOffset =
     (kUrlBarDistance - kContentDistance) / 2;
 
-static constexpr float kSceneSize = 25.0;
-static constexpr float kSceneHeight = 4.0;
+static constexpr float kSceneSize = 25.0f;
+static constexpr float kSceneHeight = 4.0f;
 static constexpr int kFloorGridlineCount = 40;
 
 static constexpr float kVoiceSearchUIGroupButtonDMM = 0.096f;
