services/resource_coordinator/public/cpp/coordination_unit_id.h
@@ -9,7 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <tuple>
 
 #include "services/resource_coordinator/public/cpp/coordination_unit_types.h"
-#include "services/resource_coordinator/public/cpp/resource_coordinator_export.h"
+#include "services/resource_coordinator/public/cpp/resource_coordinator_base_export.h"
 
 namespace resource_coordinator {
 
@@ -18,7 +18,7 @@ namespace resource_coordinator {
 // would like to move it to base/ as easily as possible at that point.
 // TODO(oysteine): Rename to CoordinationUnitGUID to better differentiate the
 // class from the internal id
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT CoordinationUnitID {
+struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_BASE_EXPORT CoordinationUnitID {
   typedef uint64_t CoordinationUnitTypeId;
 
   CoordinationUnitID();
