services/resource_coordinator/public/cpp/coordination_unit_struct_traits.h
@@ -7,12 +7,14 @@
 
 #include "services/resource_coordinator/public/cpp/coordination_unit_types.h"
 #include "services/resource_coordinator/public/interfaces/coordination_unit.mojom.h"
+#include "services/resource_coordinator/public/interfaces/interfaces_export.h"
 
 namespace mojo {
 
 template <>
-struct EnumTraits<resource_coordinator::mojom::CoordinationUnitType,
-                  resource_coordinator::CoordinationUnitType> {
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
+    EnumTraits<resource_coordinator::mojom::CoordinationUnitType,
+               resource_coordinator::CoordinationUnitType> {
   static resource_coordinator::mojom::CoordinationUnitType ToMojom(
       resource_coordinator::CoordinationUnitType type);
   static bool FromMojom(resource_coordinator::mojom::CoordinationUnitType input,
@@ -20,8 +22,9 @@ struct EnumTraits<resource_coordinator::mojom::CoordinationUnitType,
 };
 
 template <>
-struct StructTraits<resource_coordinator::mojom::CoordinationUnitIDDataView,
-                    resource_coordinator::CoordinationUnitID> {
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
+    StructTraits<resource_coordinator::mojom::CoordinationUnitIDDataView,
+                 resource_coordinator::CoordinationUnitID> {
   static uint64_t id(const resource_coordinator::CoordinationUnitID& id) {
     return id.id;
   }
