services/resource_coordinator/public/cpp/memory_instrumentation/memory_instrumentation_struct_traits.h
@@ -10,12 +10,13 @@
 #include "base/trace_event/memory_dump_request_args.h"
 #include "mojo/common/common_custom_types_struct_traits.h"
 #include "services/resource_coordinator/public/cpp/resource_coordinator_export.h"
+#include "services/resource_coordinator/public/interfaces/interfaces_export.h"
 #include "services/resource_coordinator/public/interfaces/memory_instrumentation/memory_instrumentation.mojom.h"
 
 namespace mojo {
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     EnumTraits<memory_instrumentation::mojom::DumpType,
                base::trace_event::MemoryDumpType> {
   static memory_instrumentation::mojom::DumpType ToMojom(
@@ -25,7 +26,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     EnumTraits<memory_instrumentation::mojom::LevelOfDetail,
                base::trace_event::MemoryDumpLevelOfDetail> {
   static memory_instrumentation::mojom::LevelOfDetail ToMojom(
@@ -35,7 +36,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     EnumTraits<memory_instrumentation::mojom::HeapProfilingMode,
                base::trace_event::HeapProfilingMode> {
   static memory_instrumentation::mojom::HeapProfilingMode ToMojom(
@@ -45,7 +46,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     StructTraits<memory_instrumentation::mojom::RequestArgsDataView,
                  base::trace_event::MemoryDumpRequestArgs> {
   static uint64_t dump_guid(
@@ -65,7 +66,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT StructTraits<
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT StructTraits<
     memory_instrumentation::mojom::RawAllocatorDumpEdgeDataView,
     base::trace_event::ProcessMemoryDump::MemoryAllocatorDumpEdge> {
   static uint64_t source_id(
@@ -94,7 +95,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT StructTraits<
 };
 
 template <>
-struct UnionTraits<
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT UnionTraits<
     memory_instrumentation::mojom::RawAllocatorDumpEntryValueDataView,
     base::trace_event::MemoryAllocatorDump::Entry> {
   static memory_instrumentation::mojom::RawAllocatorDumpEntryValue::Tag GetTag(
@@ -128,7 +129,7 @@ struct UnionTraits<
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     StructTraits<memory_instrumentation::mojom::RawAllocatorDumpEntryDataView,
                  base::trace_event::MemoryAllocatorDump::Entry> {
   static const std::string& name(
@@ -149,7 +150,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     StructTraits<memory_instrumentation::mojom::RawAllocatorDumpDataView,
                  std::unique_ptr<base::trace_event::MemoryAllocatorDump>> {
   static uint64_t id(
@@ -178,7 +179,7 @@ struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
 };
 
 template <>
-struct SERVICES_RESOURCE_COORDINATOR_PUBLIC_CPP_EXPORT
+struct RESOURCE_COORDINATOR_PUBLIC_INTERFACES_EXPORT
     StructTraits<memory_instrumentation::mojom::RawProcessMemoryDumpDataView,
                  std::unique_ptr<base::trace_event::ProcessMemoryDump>> {
   // TODO(primiano): Remove this wrapping vector to adapt the underlying map<>
